// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeoCoordinatesField component should render default view 1`] = `
<Memo(PublicationMap)
  country="AU"
  input={
    Object {
      "onChange": [MockFunction],
    }
  }
  onChange={[MockFunction]}
/>
`;

exports[`GeoCoordinatesField component should render default view for AU 1`] = `
<Memo(PublicationMap)
  country="AU"
  input={
    Object {
      "onChange": [MockFunction],
    }
  }
  onChange={[MockFunction]}
/>
`;

exports[`GeoCoordinatesField component should render default view for CN 1`] = `
<Memo(PublicationMap)
  country="CN"
  input={
    Object {
      "onChange": [MockFunction],
    }
  }
  onChange={[MockFunction]}
/>
`;
